# RohlikTestCase

./: .gitattributes  .gitignore  README.md
agent/: app.py  graph.py  prompts.py  pyproject.toml  run.py
mcp-server/: README.md  mcp_server.py  pyproject.toml  rebuild_faiss_index.py  semantic_utils.py
mcp-server/tests/: README.md  __init__.py  pytest.ini  test_data.py  test_recipe_finder.py  test_rohlik_product_search.py  test_shopping_list.py
mcp-server/tools/: __init__.py  product_models.py  recipe_finder.py  rohlik_product_search.py  shopping_list.py
mcp-server/tools/rohlik_data/: products.json  products.pkl  products_progress.pkl  rebuild_progress.json
