[project]
name = "meal-planning-agent"
version = "0.1.0"
description = "AI Meal Planning Assistant using LangGraph and MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.11.12",
    "gradio==5.17.1",
    "langchain==0.3.19",
    "langchain-community==0.3.18",
    "langchain-core==0.3.37",
    "langchain-openai==0.3.6",
    "langgraph==0.2.74",
    "langchain-mcp-adapters>=0.1.0",
    "pydantic==2.10.6",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["meal_planning_agent*"]